Media: Fix overflow on smaller screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -172,7 +172,7 @@ html.dark {
   }
 
   .timeline-block {
-    width: 390px;
+    width: 330px;
     margin-bottom: 30px;
   }
   .timeline-block-right {
